<resources>
    <string name="app_name">All-in-One</string>
    <string name="app_title">Aplicaciones con Android Studio</string>
    <string name="app_texto_switch">Text Switch</string>
    <string name="app_input_display">Input Display</string>
    <string name="app_color_changer">Color changer</string>
    <string name="app_toast_maker">Toast Maker</string>
    <string name="app_component_layout">Component Layout</string>
    <string name="app_scroll_component">Scroll Component</string>
    <string name="app_image_switcher">Image Switcher</string>
    <string name="app_checkbox_selector">Checkbox Selector</string>
    <string name="app_radio_selector">Radio Selector</string>
    <string name="app_slider_value">Slider Value</string>
    <string name="app_activity_launcher">Activity Launcher</string>
    <string name="app_web_opener">WEB Opener</string>
    <string name="app_counter">Counter App</string>
    <string name="app_delayed_text">Delayed Text</string>
    <string name="app_text_toogle">Text Toggle</string>
    <string name="app_snackbar_notifier">Snackbar Notifier</string>
    <string name="app_title_changer">Title Changer</string>
    <string name="app_password_viewer">Password Viewer</string>
    <string name="app_keyboard_hider">Keyboard Hider</string>
    <string name="change_background">Change</string>
    <string name="this_text_will_change">This text will change</string>
    <string name="change_text">Change text</string>
    <string name="show_toast">Show Toast</string>
    <string name="open_activity">Return to Menu</string>
    <string name="open_youtube">Open Youtube</string>
    <string name="open_github">Open Github</string>
    <string name="open_google">Open google</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="welcome_log_in_your_account">Welcome, log in your account</string>
    <string name="world_wide_web">World Wide Web</string>
    <string name="colors_scroll">Colors</string>
    <string name="locked_scroll">Locked</string>
    <string name="cube_scroll">Cube</string>
    <string name="calculator">Calculator</string>
    <string name="keyboard_scroll">Keyboard</string>
    <string name="image_scroll">Image</string>
    <string name="zero_slider">Value: 0%</string>
    <string name="change_image">Change Image</string>
    <string name="select_image">Select Image</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="change_title_view">Change title</string>
    <string name="extra_cheese">Extra cheese 🧀</string>
    <string name="pepperoni">Pepperoni 🔴</string>
    <string name="pineapple">Pineapple 🍍</string>
    <string name="meat">Meat 🥩</string>
    <string name="select_toppings_for_your_pizza">Select toppings for your pizza</string>
    <string name="your_order_is">🍕 Your order is:</string>
    <string name="show_order">Show Order</string>
    <string name="select_your_payment_method">Select your payment method</string>
    <string name="show_method_selected">Show method selected</string>
</resources>