<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="32sp"
    tools:context=".activities.ComponentLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="16sp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/web"
                app:tint="@color/purple">
            </ImageView>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple"
                android:textAlignment="center"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/welcome_log_in_your_account"
                android:textSize="24sp"/>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/montserrat_regular"
            android:layout_height="50sp"
            android:layout_columnWeight="3"
            android:hint="@string/enter_username" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/montserrat_regular"
            android:layout_height="50sp"
            android:layout_columnWeight="3"
            android:hint="@string/enter_password" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_input_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:backgroundTint="@color/purple"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_semibold"
            android:text="Log in" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>